--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <meta name="viewport" content="width=device-width, inital-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>OnPont</title>
     </head>
     <body>
-        <h1>Hello Viktor!</h1>
-        <h2>Tip: Check your console</h2>
+        <div class="slider"></div>
     </body>
-    
 </html>
